--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9a34e91c28.js" crossorigin="anonymous"></script>
+
+  <script src="./js/script.js" defer></script>
 </head>
 
 <body>
@@ -24,29 +26,29 @@
 
     <div class="timers">
       <div class="timer">
-        <div class="time-card">
-          08
+        <div class="time-card" data-type="days">
+          00
         </div>
         <p>DAYS</p>
       </div>
 
       <div class="timer">
-        <div class="time-card">
-          23
+        <div class="time-card" data-type="hours">
+          00
         </div>
         <p>HOURS</p>
       </div>
 
       <div class="timer">
-        <div class="time-card">
-          55
+        <div class="time-card" data-type="minutes">
+          00
         </div>
         <p>MINUTES</p>
       </div>
 
       <div class="timer">
-        <div class="time-card">
-          41
+        <div class="time-card" data-type="seconds">
+          00
         </div>
         <p>seconds</p>
       </div>
